package experimot.msgs;

/// \ingroup experimot_msgs
/// \interface Joint 
/// \brief Message for creating KinectBody

import "vector2d.proto";
import "quaternion.proto";
import "kinect_joint.proto";

message KinectBody
{

 enum Activity
    {
        // Summary:
        //     Left eye closed.
        EyeLeftClosed = 0;
        //
        // Summary:
        //     Right eye closed.
        EyeRightClosed = 1;
        //
        // Summary:
        //     Mouth open.
        MouthOpen = 2;
        //
        // Summary:
        //     Mouth moved.
        MouthMoved = 3;
        //
        // Summary:
        //     Looking away.
        LookingAway = 4;
    }

	 enum Appearance
    {
        // Summary:
        //     Wearing glasses.
        WearingGlasses = 0;
    }

 enum DetectionResult
    {
        // Summary:
        //     Undetermined detection.
        Unknown = 0;
        //
        // Summary:
        //     Not detected.
        No = 1;
        //
        // Summary:
        //     Maybe detected.
        Maybe = 2;
        //
        // Summary:
        //     Is detected.
        Yes = 3;
    }

    enum FrameEdges
    {
        // Summary:
        //     No frame edges.
        None = 0;
        //
        // Summary:
        //     Right frame edge.
        Right = 1;
        //
        // Summary:
        //     Left frame edge.
        Left = 2;
        //
        // Summary:
        //     Top frame edge.
        Top = 4;
        //
        // Summary:
        //     Bottom frame edge.
        Bottom = 8;
    }

	// Summary:
    //     The expression a body may have.
    enum Expression
    {
        // Summary:
        //     Neutral expression.
        Neutral = 0;
        //
        // Summary:
        //     Happy expression.
        Happy = 1;
    }

    enum TrackingConfidence
    {
        // Summary:
        //     Low confidence.
        Low = 0;
        //
        // Summary:
        //     High confidence.
        High = 1;
    }

	// Summary:
    //     The state of a hand of a body.
    enum HandState
    {
        // Summary:
        //     Undetermined hand state.
        HS_Unknown = 0;
        //
        // Summary:
        //     Hand not tracked.
        HS_NotTracked = 1;
        //
        // Summary:
        //     Open hand.
        HS_Open = 2;
        //
        // Summary:
        //     Closed hand.
        HS_Closed = 3;
        //
        // Summary:
        //     Lasso (pointer) hand.
        HS_Lasso = 4;
    }

	// Summary:
    //     The types of joints of a Body.
    enum JointType
    {
        // Summary:
        //     Base of the spine.
        SpineBase = 0;
        //
        // Summary:
        //     Middle of the spine.
        SpineMid = 1;
        //
        // Summary:
        //     Neck.
        Neck = 2;
        //
        // Summary:
        //     Head.
        Head = 3;
        //
        // Summary:
        //     Left shoulder.
        ShoulderLeft = 4;
        //
        // Summary:
        //     Left elbow.
        ElbowLeft = 5;
        //
        // Summary:
        //     Left wrist.
        WristLeft = 6;
        //
        // Summary:
        //     Left hand.
        HandLeft = 7;
        //
        // Summary:
        //     Right shoulder.
        ShoulderRight = 8;
        //
        // Summary:
        //     Right elbow.
        ElbowRight = 9;
        //
        // Summary:
        //     Right wrist.
        WristRight = 10;
        //
        // Summary:
        //     Right hand.
        HandRight = 11;
        //
        // Summary:
        //     Left hip.
        HipLeft = 12;
        //
        // Summary:
        //     Left knee.
        KneeLeft = 13;
        //
        // Summary:
        //     Left ankle.
        AnkleLeft = 14;
        //
        // Summary:
        //     Left foot.
        FootLeft = 15;
        //
        // Summary:
        //     Right hip.
        HipRight = 16;
        //
        // Summary:
        //     Right knee.
        KneeRight = 17;
        //
        // Summary:
        //     Right ankle.
        AnkleRight = 18;
        //
        // Summary:
        //     Right foot.
        FootRight = 19;
        //
        // Summary:
        //     Between the shoulders on the spine.
        SpineShoulder = 20;
        //
        // Summary:
        //     Tip of the left hand.
        HandTipLeft = 21;
        //
        // Summary:
        //     Left thumb.
        ThumbLeft = 22;
        //
        // Summary:
        //     Tip of the right hand.
        HandTipRight = 23;
        //
        // Summary:
        //     Right thumb.
        ThumbRight = 24;
    }

	required int32 TrackingId							=	1;
	required bool IsTracked								=	2;
	required int32 JointCount							=	3;
	map<int32, KinectJoint> JointPositionMap			=	4;
	map<int32, Quaternion> JointOrientationMap			=	5;
	optional FrameEdges ClippedEdges					=	6;
	optional TrackingConfidence HandLeftConfidence		=	7;
	optional HandState HandLeftState					=	8;
	optional TrackingConfidence HandRightConfidence		=	9;
	optional HandState HandRightState					=	10;
	optional bool IsRestricted							=	11;
	optional Vector2d Lean								=	12;
	optional KinectJoint.TrackingState LeanTrackingState			=	13;
}